--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "aws-sdk": "^2.80.0",
     "body-parser": "^1.17.2",
+    "debug": "^2.6.8",
     "express": "^4.15.3",
     "extend": "^3.0.1",
     "level": "^1.7.0",
