--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "ZECTBynmo (michael.vegeto@gmail.com)",
   "license": "MIT",
   "dependencies": {
-    "amazon-cognito-identity-js": "git+https://git@github.com/ZECTBynmo/amazon-cognito-identity-js.git",
+    "amazon-cognito-identity-js": "ZECTBynmo/amazon-cognito-identity-js",
     "async": "^2.5.0",
     "aws-sdk": "^2.80.0",
     "body-parser": "^1.17.2",
