--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "amazon-cognito-identity-js": "ZECTBynmo/amazon-cognito-identity-js",
+    "archiver": "^2.0.0",
     "async": "^2.5.0",
     "aws-sdk": "^2.80.0",
     "body-parser": "^1.17.2",
@@ -26,7 +27,8 @@
     "request-promise": "^4.2.1",
     "rimraf": "^2.6.1",
     "shortid": "^2.2.8",
-    "smtp-server": "^3.0.1"
+    "smtp-server": "^3.0.1",
+    "unzip": "^0.1.11"
   },
   "devDependencies": {
     "tape": "^4.7.0"
